Fix signup error msg not showing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,9 @@ h2,
 h3,
 h4,
 p {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial,
+    sans-serif !important;
   font-weight: 400;
 }
 
@@ -131,8 +133,8 @@ a {
 
 /* Door options styling */
 
-.front-door>h3,
-.storage-door>h3 {
+.front-door > h3,
+.storage-door > h3 {
   position: absolute;
   top: 60px;
   margin: auto;
@@ -171,7 +173,7 @@ a {
   background: url("../images/front-door.png") no-repeat center center;
 }
 
-.clayshop>h1 {
+.clayshop > h1 {
   margin: 40px auto;
 }
 
